// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaretBox passes the "bg" prop to both <Box> and <Caret> 1`] = `
.emotion-0 {
  background-color: red.5;
  border: 1px solid;
  border-color: gray.2;
  border-radius: 1px;
  background-color: #d73a49;
}

<div
  className="emotion-0"
  position="relative"
>
  <svg
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="#fff"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="#000"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`CaretBox passes the "borderColor" prop to both <Box> and <Caret> 1`] = `
.emotion-0 {
  background-color: white;
  border: 1px solid;
  border-color: red.5;
  border-radius: 1px;
  background-color: #fff;
}

<div
  className="emotion-0"
  position="relative"
>
  <svg
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="#fff"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="#000"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`CaretBox renders a <Caret> in <Box> with relative positioning 1`] = `
.emotion-0 {
  background-color: white;
  border: 1px solid;
  border-color: gray.2;
  border-radius: 1px;
  background-color: white;
}

<div
  className="emotion-0"
  position="relative"
>
  <svg
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="#fff"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="#000"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;
